# theoria

./: .gitignore  AGENTS.md  README.md  TODO.md  mkdocs.yml  pyproject.toml
docs/: mkdocs.yml
docs/content/en/: index.md
docs/content/en/agents/: theoretikos.md
docs/content/en/getting-started/: installation.md  quickstart.md
docs/content/ja/: architecture.md  contributing.md
docs/content/ja/agents/: bibliographos.md  theoretikos.md
docs/content/ja/getting-started/: configuration.md
docs/en/: architecture.md  cli.md  contributing.md
docs/en/agents/: bibliographos.md  graphos.md
docs/en/getting-started/: configuration.md
docs/ja/: cli.md  index.md
docs/ja/agents/: graphos.md
docs/ja/getting-started/: installation.md  quickstart.md
src/theoria/: cli.py  errors.py  main.py
src/theoria/agents/: __init__.py  bibliographos.py  graphos.py  orchestrator.py  theoretikos.py
src/theoria/auth/: oauth.py  store.py
src/theoria/bibliography/: __init__.py
src/theoria/cli/: __init__.py  auth_commands.py  compile.py  constants.py  display.py  export.py  runner.py
src/theoria/cli/sessions/: __init__.py  base.py  chat.py  edit.py  research.py  search.py
src/theoria/config/: __init__.py  loader.py
src/theoria/latex/: __init__.py
src/theoria/providers/: __init__.py
src/theoria/storage/: __init__.py
tests/: test_cli.py  test_errors.py  test_providers.py
