# SPDX-License-Identifier: WTFPL

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theoria"
version = "0.1.0"
description = "Humanities research & LaTeX drafting agentic CLI - thought externalization, critical examination, citation-first design"
readme = "README.md"
requires-python = ">=3.11"
license = "WTFPL"
authors = [
    { name = "Theoria Contributors" }
]
keywords = [
    "research",
    "humanities",
    "latex",
    "bibliography",
    "citation",
    "llm",
    "agent",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "langgraph>=0.2.0",
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.20.0",
    "pybtex>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "types-PyYAML>=6.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-static-i18n>=1.2.0",
]

[project.scripts]
theoria = "theoria.main:app"

[project.urls]
Repository = "https://github.com/theoria-project/theoria"
Documentation = "https://theoria-project.github.io/theoria"

[tool.hatch.build.targets.wheel]
packages = ["src/theoria"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "TC003",    # Move stdlib import into type-checking block (false positive for dataclass fields)
]

[tool.ruff.lint.isort]
known-first-party = ["theoria"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "langgraph.*",
    "pybtex.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/theoria --cov-report=term-missing"

[tool.coverage.run]
source = ["src/theoria"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
